flapivor/tests/m1/hopix/parser/good/51-instanciation-5.hopix
val x = map <Int, String>