flapivor/tests/m1/hopix/parser/bad/94-case-7.hopix
val mono =
  case x {
  | Pair<Int Int> (x, y) => x + y
  }